--- a/frontend/recipes/package.json
+++ b/frontend/recipes/package.json
@@ -15,6 +15,7 @@
     "@chakra-ui/toast": "^7.0.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@rollup/rollup-darwin-arm64": "^4.18.0",
     "axios": "^1.7.2",
     "firebase": "^10.12.2",
     "framer-motion": "^11.2.10",
