--- a/frontend/recipes/package.json
+++ b/frontend/recipes/package.json
@@ -18,6 +18,7 @@
     "@rollup/rollup-darwin-arm64": "^4.18.0",
     "axios": "^1.7.2",
     "firebase": "^10.12.2",
+    "formik": "^2.4.6",
     "framer-motion": "^11.2.10",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
