--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "firebase": "^10.12.2",
     "firebase-admin": "^12.1.1",
     "multer": "^1.4.5-lts.1",
+    "node-fetch": "^3.3.2",
     "nodemon": "^3.1.3",
     "openai": "^4.48.2"
   }
